Add player_value to player_game_week model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,13 @@
 en:
   hello: "Hello world"
   number:
-     currency:
-        format:
-          unit: '€'
+    human:
+      decimal_units:
+        format: "%n%u"
+        units:
+          unit: ""
+          thousand: k
+          million: m
+    currency:
+      format:
+        unit: '€'
